implementing the products with relation to category and unit
